<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.TBMCPlugins</groupId>
    <artifactId>ButtonCore</artifactId>
    <packaging>pom</packaging>
    <version>master-SNAPSHOT</version>
    <properties>
        <lombok.version>1.18.10</lombok.version>
    </properties>
    <name>ButtonCore Parent</name>

    <modules>
        <module>ButtonCore</module>
        <module>ButtonProcessor</module>
        <module>BuildConfigUpdater</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>8</release>
                        <annotationProcessorPaths>
                            <annotationProcessorPath>
                                <groupId>com.github.bsideup.jabel</groupId>
                                <artifactId>jabel-javac-plugin</artifactId>
                                <version>0.2.0</version>
                            </annotationProcessorPath>
                            <annotationProcessorPath>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </annotationProcessorPath>
                            <annotationProcessorPath>
                                <groupId>com.github.TBMCPlugins.ButtonCore</groupId>
                                <artifactId>ButtonProcessor</artifactId>
                                <version>master-SNAPSHOT</version>
                            </annotationProcessorPath>
                        </annotationProcessorPaths>
                        <annotationProcessors> <!-- Order is important, so these lines are needed -->
                            <annotationProcessor>com.github.bsideup.jabel.JabelJavacProcessor</annotationProcessor>
                            <annotationProcessor>lombok.launch.AnnotationProcessorHider$AnnotationProcessor</annotationProcessor>
                            <annotationProcessor>buttondevteam.buttonproc.ButtonProcessor</annotationProcessor>
                        </annotationProcessors>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <useSystemClassLoader>false</useSystemClassLoader> <!-- https://stackoverflow.com/a/53012553/2703239 -->
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>3.8.1</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>intellij-idea-only</id>
            <activation>
                <property>
                    <name>idea.maven.embedder.version</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <release>13</release>
                            <compilerArgs>
                                <arg>--enable-preview</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>